@@ -3,6 +3,8 @@ package com.caro.bizkit.domain.chat.service;
 import com.caro.bizkit.domain.chat.dto.ChatMessagePagination;
 import com.caro.bizkit.domain.chat.dto.ChatMessageRequest;
 import com.caro.bizkit.domain.chat.dto.ChatMessageResponse;
+import com.caro.bizkit.domain.chat.dto.ChatMessagesResult;
+import com.caro.bizkit.domain.chat.dto.ChatReadEvent;
 import com.caro.bizkit.domain.chat.entity.ChatMessage;
 import com.caro.bizkit.domain.chat.entity.ChatParticipant;
 import com.caro.bizkit.domain.chat.entity.ChatRoom;
@@ -12,12 +14,14 @@ import com.caro.bizkit.domain.chat.repository.ChatRoomRepository;
 import com.caro.bizkit.domain.user.dto.UserPrincipal;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ChatMessageService {
@@ -25,6 +29,7 @@ public class ChatMessageService {
     private final ChatMessageRepository chatMessageRepository;
     private final ChatParticipantRepository chatParticipantRepository;
     private final ChatRoomRepository chatRoomRepository;
+    private final ChatRedisPublisher chatRedisPublisher;
 
     @Transactional
     public ChatMessageResponse sendMessage(UserPrincipal principal, ChatMessageRequest request) {
@@ -46,7 +51,7 @@ public class ChatMessageService {
     }
 
     @Transactional(readOnly = true)
-    public List<ChatMessageResponse> getMessages(UserPrincipal principal, Integer roomId, Long cursorId, int size) {
+    public ChatMessagesResult getMessages(UserPrincipal principal, Integer roomId, Long cursorId, int size) {
         ChatParticipant participant = chatParticipantRepository
                 .findByUserIdAndChatRoomId(principal.id(), roomId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN, "채팅방 참여자가 아닙니다."));
@@ -63,12 +68,23 @@ public class ChatMessageService {
 
         // size + 1 개를 요청했으므로, size 초과분이 있으면 has_next = true
         List<ChatMessage> result = messages.size() > size ? messages.subList(0, size) : messages;
-        return result.stream().map(ChatMessageResponse::from).toList();
+        List<ChatMessageResponse> responses = result.stream().map(ChatMessageResponse::from).toList();
+
+        // 상대방의 lastReadMessageId 조회
+        Long otherLastReadMessageId = chatParticipantRepository
+                .findByChatRoomIdAndLeftAtIsNull(roomId)
+                .stream()
+                .filter(p -> !p.getUser().getId().equals(principal.id()))
+                .findFirst()
+                .map(ChatParticipant::getLastReadMessageId)
+                .orElse(null);
+
+        return new ChatMessagesResult(responses, otherLastReadMessageId);
     }
 
-    public ChatMessagePagination buildPagination(List<ChatMessageResponse> messages, int requestedSize) {
-        boolean hasNext = messages.size() == requestedSize;
-        Long cursorId = messages.isEmpty() ? null : messages.get(messages.size() - 1).message_id();
+    public ChatMessagePagination buildPagination(ChatMessagesResult result, int requestedSize) {
+        boolean hasNext = result.messages().size() == requestedSize;
+        Long cursorId = result.messages().isEmpty() ? null : result.messages().getLast().message_id();
         return new ChatMessagePagination(cursorId, hasNext);
     }
 
@@ -82,7 +98,23 @@ public class ChatMessageService {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "나간 채팅방입니다.");
         }
 
-        chatMessageRepository.findTopByChatRoomIdOrderByIdDesc(roomId)
-                .ifPresent(latest -> participant.updateLastReadMessageId(latest.getId()));
+        chatMessageRepository.findTopByChatRoomIdOrderByIdDesc(roomId).ifPresent(latest -> {
+            log.debug("[READ] markAsRead - roomId={}, userId={}, latestMessageId={}", roomId, principal.id(), latest.getId());
+            participant.updateLastReadMessageId(latest.getId());
+
+            // 상대방에게 읽음 알림 전송 (Redis pub/sub으로 멀티 인스턴스 지원)
+            chatParticipantRepository.findByChatRoomIdAndLeftAtIsNull(roomId).stream()
+                    .filter(p -> !p.getUser().getId().equals(principal.id()))
+                    .findFirst()
+                    .ifPresentOrElse(
+                            other -> {
+                                log.debug("[READ] 상대방 발견 - targetUserId={}, roomId={}", other.getUser().getId(), roomId);
+                                chatRedisPublisher.publishReadNotification(
+                                        new ChatReadEvent(roomId, latest.getId(), other.getUser().getId())
+                                );
+                            },
+                            () -> log.warn("[READ] 상대방 없음 - roomId={}, userId={}", roomId, principal.id())
+                    );
+        });
     }
 }
